--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         </div>
 
         <button name="Clear" type="button" id="clear">CE</button>
+        <button name="Backspace" type="button" id="backspace">←</button>
         <div class="buttons">
             <div class="numPad">
                 <button name="7" type="button" id="seven">7</button>
